internet_gateway.tf
resource "aws_internet_gateway" "internet_gateway"{
	
	vpc_id = aws_vpc.custom_vpc.id
	tags = {
	Name = "Internet Gateway"
	}
}
